@@ -1,8 +1,12 @@
 fai (3.2.12) unstable; urgency=low
 
+  * lib/setup-storage/Parser.pm, lib/setup-storage/Sizes.pm: Warn, if a
+    preserved partition does not match the size specified in the
+    disk_config; fail, if an extended partition is to be created in place
+    of a to-be-preserved partition (closes: #501772)
   * make-fai-nfsroot: print version of debootstrap (closes: #500046)
 
- -- Thomas Lange <lange@debian.org>  Tue, 14 Oct 2008 15:04:22 +0200
+ -- Thomas Lange <lange@debian.org>  Tue, 14 Oct 2008 15:29:21 +0200
 
 fai (3.2.11) unstable; urgency=low
 
